--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
                 
                 if (stats) {
                     // KPIs Generales de la primera medida
-                    addKPI(kpisContainer, "💰", `Total ${mainMeasure}`, stats.sum, null, format);
+                    addKPI(kpisContainer, "📊", `Total ${mainMeasure}`, stats.sum, null, format);
                     addKPI(kpisContainer, "Ø", `Promedio ${mainMeasure}`, stats.avg, null, format);
                 }
                 
@@ -1351,4 +1351,5 @@
 
     </script>
 </body>
+
 </html>
