--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
                 
                 if (stats) {
                     // KPIs Generales de la primera medida
-                    addKPI(kpisContainer, "💰", `Total ${mainMeasure}`, stats.sum, null, format);
+                    addKPI(kpisContainer, "📊", `Total ${mainMeasure}`, stats.sum, null, format);
                     addKPI(kpisContainer, "Ø", `Promedio ${mainMeasure}`, stats.avg, null, format);
                 }
                 
@@ -1371,3 +1371,4 @@
     </script>
 </body>
 </html>
+
